Teste de Integração atualizado